changes stage 2